add projects, experiments, and insights

--- a/themes/meghna-hugo/layouts/index.html
+++ b/themes/meghna-hugo/layouts/index.html
@@ -1,33 +1,17 @@
 {{ define "main" }}
 
-{{ partial "banner.html" . }}
-
 {{ partial "navigation.html" . }}
 
-{{ partial "about.html" . }}
+{{ partial "projects.html" . }}
 
-{{ partial "feature.html" . }}
+{{ partial "experiments.html" . }}
 
-{{ partial "cta.html" . }}
-
-{{ partial "service.html" . }}
-
-{{ partial "skill.html" . }}
-
-{{ partial "portfolio.html" . }}
-
-{{ partial "funfacts.html" . }}
+{{ partial "insights.html" . }}
 
 {{ partial "team.html" . }}
 
-{{ partial "pricing.html" . }}
-
-{{ partial "testimonial.html" . }}
-
-{{ partial "blog.html" . }}
+{{ partial "about.html" . }}
 
 {{ partial "contact.html" . }}
-
-{{ partial "map.html" . }}
 
 {{ end }}
