--- a/themes/meghna-hugo/layouts/partials/team.html
+++ b/themes/meghna-hugo/layouts/partials/team.html
@@ -5,7 +5,7 @@
 {{"<!-- Start Our Team -->" | safeHTML}}
 <section id="team" class="section">
   <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-start">
       <div class="col-lg-12">
         {{"<!-- section title -->" | safeHTML}}
         <div class="title text-center wow fadeInUp" data-wow-duration="500ms">
