--- a/themes/meghna-hugo/layouts/partials/about.html
+++ b/themes/meghna-hugo/layouts/partials/about.html
@@ -16,6 +16,11 @@
 			</div>
 			{{"<!-- /section title -->" | safeHTML}}
 
+			<div class="col-lg-12">
+				<iframe style="width: 100%;" height=550 src="{{ .video }}">
+				</iframe>
+			</div>
+
 			{{ range .about_item }}
 			{{"<!-- About item -->" | safeHTML}}
 			<div class="col-lg-4 text-center wow fadeInUp" data-wow-duration="500ms">
