--- a/themes/meghna-hugo/layouts/partials/navigation.html
+++ b/themes/meghna-hugo/layouts/partials/navigation.html
@@ -15,7 +15,7 @@
 
 			<div class="collapse navbar-collapse" id="navigation">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="#body">{{ .Site.Params.home }}</a></li>
+					<li class="nav-item"><a class="nav-link" href="{{ $.Site.BaseURL }}">{{ .Site.Params.home }}</a></li>
 					{{ if .IsHome }}
 					{{ range .Site.Menus.main }}
 					<li class="nav-item"><a class="nav-link" href="#{{ .URL }}">{{ .Name }}</a></li>
