--- a/themes/meghna-hugo/layouts/partials/navigation.html
+++ b/themes/meghna-hugo/layouts/partials/navigation.html
@@ -1,3 +1,4 @@
+{{ $listviewpages := .Site.Params.listviewpages }}
 <section class="sticky-top navigation">
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-dark">
@@ -16,14 +17,12 @@
 			<div class="collapse navbar-collapse" id="navigation">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link" href="{{ $.Site.BaseURL }}">{{ .Site.Params.home }}</a></li>
-					{{ if .IsHome }}
-					{{ range .Site.Menus.main }}
-					<li class="nav-item"><a class="nav-link" href="#{{ .URL }}">{{ .Name }}</a></li>
-					{{ end }}
 
+					{{ range .Site.Menus.main }}
+					{{ if in $listviewpages .Name }}
+					<li class="nav-item"><a class="nav-link" href="{{ $.Site.BaseURL | relLangURL }}/{{ .URL }}">{{ .Name }}</a>
+					</li>
 					{{ else }}
-
-					{{ range .Site.Menus.main }}
 					<li class="nav-item"><a class="nav-link" href="{{ $.Site.BaseURL | relLangURL }}#{{ .URL }}">{{ .Name }}</a>
 					</li>
 					{{ end }}
