added credits section in footer

--- a/themes/meghna-hugo/layouts/partials/footer.html
+++ b/themes/meghna-hugo/layouts/partials/footer.html
@@ -20,6 +20,7 @@
 					</a>
 					<br>
 					<p>{{ i18n "copyright" | markdownify }}</p>
+					<p>{{ i18n "credits" | markdownify }}</p>
 				</div>
 			</div>
 		</div>
